// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`findSolutions should solve the puzzle 3-5-4 1`] = `
{
  "isMultipleOfGCD": true,
  "results": [
    {
      "count": 9,
      "hash": "{"jugs":[0,4],"nextAction":"fill","nextJug":"jug 1"}",
      "result": true,
    },
    {
      "count": 7,
      "hash": "{"jugs":[3,4],"nextAction":"pour","nextJug":"jug 1"}",
      "result": true,
    },
  ],
  "stepList": [
    [
      {
        "jugs": [
          3,
          0,
        ],
        "nextAction": "pour",
        "nextJug": "jug 1",
      },
      {
        "jugs": [
          0,
          3,
        ],
        "nextAction": "fill",
        "nextJug": "jug 1",
      },
      {
        "jugs": [
          3,
          3,
        ],
        "nextAction": "pour",
        "nextJug": "jug 1",
      },
      {
        "jugs": [
          1,
          5,
        ],
        "nextAction": "empty",
        "nextJug": "jug 2",
      },
      {
        "jugs": [
          1,
          0,
        ],
        "nextAction": "pour",
        "nextJug": "jug 1",
      },
      {
        "jugs": [
          0,
          1,
        ],
        "nextAction": "fill",
        "nextJug": "jug 1",
      },
      {
        "jugs": [
          3,
          1,
        ],
        "nextAction": "pour",
        "nextJug": "jug 1",
      },
      {
        "jugs": [
          0,
          4,
        ],
        "nextAction": "fill",
        "nextJug": "jug 1",
      },
    ],
    [
      {
        "jugs": [
          0,
          5,
        ],
        "nextAction": "pour",
        "nextJug": "jug 2",
      },
      {
        "jugs": [
          3,
          2,
        ],
        "nextAction": "empty",
        "nextJug": "jug 1",
      },
      {
        "jugs": [
          0,
          2,
        ],
        "nextAction": "pour",
        "nextJug": "jug 2",
      },
      {
        "jugs": [
          2,
          0,
        ],
        "nextAction": "fill",
        "nextJug": "jug 2",
      },
      {
        "jugs": [
          2,
          5,
        ],
        "nextAction": "pour",
        "nextJug": "jug 2",
      },
      {
        "jugs": [
          3,
          4,
        ],
        "nextAction": "pour",
        "nextJug": "jug 1",
      },
    ],
  ],
  "winner": "2",
}
`;

exports[`findSolutions should solve the puzzle 11-4-7 1`] = `
{
  "isMultipleOfGCD": true,
  "results": [
    {
      "count": 3,
      "hash": "{"jugs":[7,4],"nextAction":"pour","nextJug":"jug 2"}",
      "result": true,
    },
    {
      "count": 27,
      "hash": "{"jugs":[7,0],"nextAction":"fill","nextJug":"jug 2"}",
      "result": true,
    },
  ],
  "stepList": [
    [
      {
        "jugs": [
          11,
          0,
        ],
        "nextAction": "pour",
        "nextJug": "jug 1",
      },
      {
        "jugs": [
          7,
          4,
        ],
        "nextAction": "pour",
        "nextJug": "jug 2",
      },
    ],
    [
      {
        "jugs": [
          0,
          4,
        ],
        "nextAction": "pour",
        "nextJug": "jug 2",
      },
      {
        "jugs": [
          4,
          0,
        ],
        "nextAction": "fill",
        "nextJug": "jug 2",
      },
      {
        "jugs": [
          4,
          4,
        ],
        "nextAction": "pour",
        "nextJug": "jug 2",
      },
      {
        "jugs": [
          8,
          0,
        ],
        "nextAction": "fill",
        "nextJug": "jug 2",
      },
      {
        "jugs": [
          8,
          4,
        ],
        "nextAction": "pour",
        "nextJug": "jug 2",
      },
      {
        "jugs": [
          11,
          1,
        ],
        "nextAction": "empty",
        "nextJug": "jug 1",
      },
      {
        "jugs": [
          0,
          1,
        ],
        "nextAction": "pour",
        "nextJug": "jug 2",
      },
      {
        "jugs": [
          1,
          0,
        ],
        "nextAction": "fill",
        "nextJug": "jug 2",
      },
      {
        "jugs": [
          1,
          4,
        ],
        "nextAction": "pour",
        "nextJug": "jug 2",
      },
      {
        "jugs": [
          5,
          0,
        ],
        "nextAction": "fill",
        "nextJug": "jug 2",
      },
      {
        "jugs": [
          5,
          4,
        ],
        "nextAction": "pour",
        "nextJug": "jug 2",
      },
      {
        "jugs": [
          9,
          0,
        ],
        "nextAction": "fill",
        "nextJug": "jug 2",
      },
      {
        "jugs": [
          9,
          4,
        ],
        "nextAction": "pour",
        "nextJug": "jug 2",
      },
      {
        "jugs": [
          11,
          2,
        ],
        "nextAction": "empty",
        "nextJug": "jug 1",
      },
      {
        "jugs": [
          0,
          2,
        ],
        "nextAction": "pour",
        "nextJug": "jug 2",
      },
      {
        "jugs": [
          2,
          0,
        ],
        "nextAction": "fill",
        "nextJug": "jug 2",
      },
      {
        "jugs": [
          2,
          4,
        ],
        "nextAction": "pour",
        "nextJug": "jug 2",
      },
      {
        "jugs": [
          6,
          0,
        ],
        "nextAction": "fill",
        "nextJug": "jug 2",
      },
      {
        "jugs": [
          6,
          4,
        ],
        "nextAction": "pour",
        "nextJug": "jug 2",
      },
      {
        "jugs": [
          10,
          0,
        ],
        "nextAction": "fill",
        "nextJug": "jug 2",
      },
      {
        "jugs": [
          10,
          4,
        ],
        "nextAction": "pour",
        "nextJug": "jug 2",
      },
      {
        "jugs": [
          11,
          3,
        ],
        "nextAction": "empty",
        "nextJug": "jug 1",
      },
      {
        "jugs": [
          0,
          3,
        ],
        "nextAction": "pour",
        "nextJug": "jug 2",
      },
      {
        "jugs": [
          3,
          0,
        ],
        "nextAction": "fill",
        "nextJug": "jug 2",
      },
      {
        "jugs": [
          3,
          4,
        ],
        "nextAction": "pour",
        "nextJug": "jug 2",
      },
      {
        "jugs": [
          7,
          0,
        ],
        "nextAction": "fill",
        "nextJug": "jug 2",
      },
    ],
  ],
  "winner": "1",
}
`;
